feat: 添加网页端

--- a/packages/web/src/assets/main.scss
+++ b/packages/web/src/assets/main.scss
@@ -8,9 +8,11 @@ body,
 }
 
 #app {
+  --foreground: var(--vscode-foreground);
   --textLink-foreground: var(--vscode-textLink-foreground);
   --sideBar-background: var(--vscode-sideBar-background);
   --toolbar-hoverBackground: var(--vscode-toolbar-hoverBackground);
+  --list-hoverBackground: var(--vscode-list-hoverBackground);
 }
 
 // 让 arco-design 色彩适应 VSCode 主题
