--- a/packages/web/src/assets/main.scss
+++ b/packages/web/src/assets/main.scss
@@ -43,3 +43,19 @@ body,
     display: none;
   }
 }
+
+input[type='color'] {
+  border: none;
+  padding: 0;
+  border-radius: 2px;
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+  padding: 0;
+  margin: 0;
+}
+
+input[type='color']::-webkit-color-swatch {
+  border: none;
+  border-radius: 2px;
+}
